RESOLVED FIXED130065
r165414 broke the 32-bit x86 tests: ASSERTION FAILED: result != InvalidIndex @ GPRInfo.h:330
https://bugs.webkit.org/show_bug.cgi?id=130065
Summary r165414 broke the 32-bit x86 tests: ASSERTION FAILED: result != InvalidIndex ...
Mark Lam
Reported 2014-03-10 19:56:43 PDT
The assertion failure shows up readily when you run "run-javascriptcore-tests --debug --32-bit".
Attachments
the patch. (3.25 KB, patch)
2014-03-10 21:15 PDT, Mark Lam
no flags
Filip Pizlo
Comment 1 2014-03-10 19:59:00 PDT
Looking at it.
Mark Lam
Comment 2 2014-03-10 21:08:07 PDT
Mark Lam
Comment 3 2014-03-10 21:11:07 PDT
There is code in ScratchRegisterAllocator.cpp that is expecting GPRInfo::toIndex() to be able to return InvalidIndex. Hence, the assertion is invalid. Ditto for FPRInfo::toIndex(). The fix is to remove the "result != InvalidIndex" assertions.
Mark Lam
Comment 4 2014-03-10 21:15:15 PDT
Created attachment 226381 [details] the patch.
Mark Lam
Comment 5 2014-03-10 21:20:08 PDT
Comment on attachment 226381 [details] the patch. Thanks for the review.
Filip Pizlo
Comment 6 2014-03-10 21:24:22 PDT
Comment on attachment 226381 [details] the patch. r=me too
WebKit Commit Bot
Comment 7 2014-03-10 21:48:00 PDT
Comment on attachment 226381 [details] the patch. Clearing flags on attachment: 226381 Committed r165431: <http://trac.webkit.org/changeset/165431>
WebKit Commit Bot
Comment 8 2014-03-10 21:48:03 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.