r165414 broke the 32-bit x86 tests: ASSERTION FAILED: result != InvalidIndex @ GPRInfo.h:330. <https://webkit.org/b/130065>

Reviewed by Michael Saboff.

There is code in ScratchRegisterAllocator.cpp that is relying on GPRInfo::toIndex()
being able to return InvalidIndex.  Hence, the assertion is invalid.  Ditto for
FPRInfo::toIndex().

The fix is to remove the "result != InvalidIndex" assertions.

* jit/FPRInfo.h:
(JSC::FPRInfo::toIndex):
* jit/GPRInfo.h:
(JSC::GPRInfo::toIndex):


Canonical link: https://commits.webkit.org/148049@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@165431 268f45cc-cd09-0410-ab3c-d52691b4dbfc